--- a/tasks.json
+++ b/tasks.json
@@ -5,6 +5,15 @@
         "items": [
             {
                 "type": "SHARE_POST",
+                "title": "Repost and Like Unich Tweet #211",
+                "pointReward": 40,
+                "link": "https://x.com/unich_com/status/1894318463377969584",
+                "claimed": true,
+                "id": "67bd9020818d45aa231f2468",
+                "social": "TWITTER"
+            },
+            {
+                "type": "SHARE_POST",
                 "title": "Repost and Like Unich Tweet #209",
                 "pointReward": 40,
                 "link": "https://x.com/unich_com/status/1893886893210599547",
